adds header's banner

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- Inizio container di tutti gli elementi della pagina -->
+    <div id="all-in-one-container">
+
+        <!-- intestazione della pagina -->
+        <header>
+
+            <!-- Banner superiore con logo  -->
+            <div id="banner">
+                <div id="booleaner-logo"></div>
+            </div>
+
+        </header>
+
+    </div>
+    <!-- Fine container di tutti gli elementi della pagina -->
 </body>
 </html>
