adds page title

--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
                 <div id="booleaner-logo"></div>
             </div>
 
+            <!-- Titolo principale della pagina  -->
+            <div class="page-title">
+                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+                <div class="title-description">
+                    <span id="autore">Scritto da <span class="text-lightblue">The Booleaner</span></span>
+                    <br>
+                    <span id="data">il 10/10/2020</span>
+                </div>
+            </div>
+
         </header>
 
     </div>
