adds article's imgs

--- a/index.html
+++ b/index.html
@@ -18,15 +18,46 @@
 
             <!-- Titolo principale della pagina  -->
             <div class="page-title">
+
                 <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Berners-Lee</h1>
+
                 <div class="title-description">
                     <span id="autore">Scritto da <span class="text-lightblue">The Booleaner</span></span>
                     <br>
                     <span id="data">il 10/10/2020</span>
                 </div>
+
             </div>
 
         </header>
+
+        <!-- Corpo centrale della pagina  -->
+        <main>
+
+            <section>
+                <!-- immagini dell'articolo -->
+                <figure>
+                    <img src="img/tim-1.jpg" alt="1st photo">
+                    <img src="img/tim-2.jpg" alt="2nd photo">
+                    <figcaption>1st Photo: John S. and James L. Knight Foundation, by Scott Henrischsen</figcaption>
+                    <figcaption>2nd Photo: Wikimedia, by Paul Clarke</figcaption>
+                </figure>
+
+            </section>
+
+            <!-- primo paragrafo  -->
+            <section>
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur rem quae, exercitationem ipsa aperiam quaerat quibusdam laudantium obcaecati. Tempora alias explicabo facilis nobis dolorem rem aut ad facere? Animi, neque.
+                    Vero nulla officiis repellendus aliquam recusandae earum dolorum quos enim laboriosam nam quibusdam illo, ex culpa exercitationem blanditiis placeat facere unde id explicabo. Totam facere voluptatum natus iure! Similique, hic!
+                </p>
+
+                
+
+            </section>
+
+        </main>
 
     </div>
     <!-- Fine container di tutti gli elementi della pagina -->
