adds p and ul sections

--- a/index.html
+++ b/index.html
@@ -47,16 +47,25 @@
 
             <!-- primo paragrafo  -->
             <section>
-
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur rem quae, exercitationem ipsa aperiam quaerat quibusdam laudantium obcaecati. Tempora alias explicabo facilis nobis dolorem rem aut ad facere? Animi, neque.
-                    Vero nulla officiis repellendus aliquam recusandae earum dolorum quos enim laboriosam nam quibusdam illo, ex culpa exercitationem blanditiis placeat facere unde id explicabo. Totam facere voluptatum natus iure! Similique, hic!
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam sint eveniet, tempora fugiat ipsum, nesciunt est alias quidem magni non sapiente pariatur, porro asperiores atque animi dolorum sed excepturi tempore.
+                    Aliquid, vero cupiditate ab accusamus ea delectus? <span class="hightlight">Incidunt qui hic voluptatem, quos explicabo accusamus libero voluptate ullam at sapiente doloremque nesciunt ut, dolorum numquam obcaecati asperiores delectus quidem?</span>Eligendi, commodi!
+                    Optio quod aliquid ea distinctio explicabo sunt aspernatur, laborum libero? Enim tempora aperiam nisi excepturi nobis nesciunt quasi, dolorum quo. Vero nisi voluptatem doloremque quaerat, corrupti alias laborum dicta praesentium.
+                    Est, quos animi? Deserunt, harum aliquid. Ab illum possimus facilis fugit animi consectetur eius harum omnis totam esse! Repellat velit enim alias animi quasi inventore dignissimos vel quisquam expedita ullam!
                 </p>
-
-                
-
             </section>
 
+            <!-- paragrafo con lista -->
+            <section>
+
+                <ul>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias aspernatur quidem fugit perferendis dicta expedita, inventore ipsam nostrum quibusdam tempore, maiores quisquam repellat fugiat iusto ratione doloribus ipsum porro dignissimos!</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias aspernatur quidem fugit perferendis dicta expedita, inventore ipsam nostrum quibusdam tempore, maiores quisquam repellat fugiat iusto ratione doloribus ipsum porro dignissimos!</li>
+                    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias aspernatur quidem fugit perferendis dicta expedita, inventore ipsam nostrum quibusdam tempore, maiores quisquam repellat fugiat iusto ratione doloribus ipsum porro dignissimos!</li>
+                </ul>
+
+            </section>
+            
         </main>
 
     </div>
