--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <!-- Corpo centrale della pagina  -->
         <main>
 
+            <!-- paragrafo con immagini  -->
             <section>
                 <!-- immagini dell'articolo -->
                 <figure>
@@ -65,7 +66,56 @@
                 </ul>
 
             </section>
-            
+
+            <!-- paragrafo con tabella  -->
+            <section>
+
+                <!-- inizio tabella -->
+                <table>
+
+                    <thead>
+                        <tr>
+                            <th class="short">Lorem ipsum dolor</th>
+                            <th class="short">Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                        </tr>     
+                    </thead>
+
+                    <tbody>
+                        <tr class="bg_lb">
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus quo animi beatae veniam repudiandae. Aspernatur possimus ratione fugiat et pariatur illo cumque excepturi in, assumenda necessitatibus esse atque aliquid magnam.</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus quo animi beatae veniam repudiandae. Aspernatur possimus ratione fugiat et pariatur illo cumque excepturi in, assumenda necessitatibus esse atque aliquid magnam.</td>
+                        </tr>
+                        <tr class="bg_lb">
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloribus quo animi beatae veniam repudiandae. Aspernatur possimus ratione fugiat et pariatur illo cumque excepturi in, assumenda necessitatibus esse atque aliquid magnam.</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <!-- fine tabella  -->
+
+            </section>
+
+            <!-- ultimo paragrafo -->
+            <section>
+
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nesciunt tempora minus laudantium blanditiis at incidunt quia hic quo illum sed ex eos repudiandae cum, consequatur laborum repellat vero voluptates consectetur!
+                    Officia ullam ex, maiores laboriosam quasi rem ad, dolor suscipit natus est deserunt temporibus illum optio totam in! Officiis corrupti architecto qui nobis impedit ut repellat consectetur totam odit enim.
+                    Consequuntur facere <span class="hightlight">quos eos ad officiis natus. Quos temporibus deserunt laboriosam quas soluta blanditiis voluptatem accusantium reiciendis ullam nam animi assumenda nihil </span> amet in cum aliquid, facilis quis incidunt aperiam.
+                    Iure illo at modi quod assumenda officiis ullam laudantium asperiores quos deleniti neque autem minima ipsam aperiam fuga reprehenderit sunt quo fugiat vero, sapiente officia? Reprehenderit laborum eveniet dignissimos maiores.
+                    Laborum corrupti unde placeat nihil nesciunt vitae temporibus odit eius eum facilis? Esse laudantium pariatur neque consectetur, debitis delectus suscipit laborum cumque aliquam assumenda dolorum rerum sint vitae, dolorem fuga.
+                </p>
+
+            </section>
+
         </main>
 
     </div>
