--- a/index.html
+++ b/index.html
@@ -118,6 +118,21 @@
 
         </main>
 
+        <!-- Articoli correlati -->
+        <footer>
+
+            <h4>Potrebbero interessarti</h4>
+
+            <div class="art_1">
+                <h3 class="text-white">Lorem ipsum dolor</h3>
+            </div>
+
+            <div class="art_2">
+                <h3 class="text-white">Lorem ipsum dolor</h3>
+            </div>
+
+        </footer>
+
     </div>
     <!-- Fine container di tutti gli elementi della pagina -->
 </body>
